fixed the margins of the about me section

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 </section>
 <!--About Me Section-->
 <main>
-<section id="About-Me">
-    <div class="flex-column">
-    <h2 class="section title line-border">About Me </h2>
+<section id="about-me">
+    <div class="flex-row">
+    <h2 class="section-title">About Me </h2>
+    
     <div class="Personal-info">
-        <div class="about-me">
         <p>
             I have worked for Prudential Insurance Company since July 2019. I started as a Associate System Developer where I was tasked to help the Embed Intelligence and Machine Learning team as a Scrum Master. Within this team I helped with generating a embed Intelligence engine, via the use of Python. In July of 2020 I was promoted to Analyst System Developer, where I now work as a part time developer as well as helping 4 teams with Scrum Master duties. My teams currently are one of the Enterprise DevOps teams that helped reshape the DevOps space within Prudential. <br/>
            </p>
@@ -52,10 +52,20 @@
             Education: Graduated with a Bachelors in Economics and Mathematics in 2012 , and further continued my education in 2019 with completing my Bachelors of Science in Computer Science from Southern New Hampshire University in 2019. Currently I am pursuing a Masters in Computer Science and a Masters in Artifical Inteligence from Steven's Instutite of Technology, as well as attending a Full Stack Bootcamp with Rutgers University. 
         </p>
     </div>
+</div>
+</div>
+</section>
+<section id= "Work">
+    <div class="flex-row">
+    <h2 class="section-title">Work</h2>
+        <div class="Personal-info">
+
     </div>
     </div>
 
+
 </section>
+
 </main>
 <body>
     
