Added run body image to Work Section

--- a/index.html
+++ b/index.html
@@ -55,15 +55,17 @@
 </div>
 </div>
 </section>
-<section id= "Work">
+<!--Start of the work section-->
+<section id= "work">
     <div class="flex-row">
     <h2 class="section-title">Work</h2>
-        <div class="Personal-info">
+        <div class="Personal-info run-buddy">
+            <span>Run-Buddy</span>
+            <img src='./assets/images/Run Buddy Image.png' alt="Run-Buddy Header Image" />
+            <h4>HTML/CSS</h4>
 
     </div>
     </div>
-
-
 </section>
 
 </main>
