Made some CSS updates for flexbox

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <nav>
         <ul>
             <li>
-                <a href="#About-Me">About Me</a>
+                <a href="#about-me">About Me</a>
             </li>
             <li>
-                <a href="#Work">Work</a>
+                <a href="#work">Work</a>
             </li>
             <li>
-                <a href="#Contact-Me">Contact Me</a>
+                <a href="#contact-me">Contact Me</a>
             </li>
             <li>
-                <a href="#Resume">Resume</a>
+                <a href="#resume">Resume</a>
             </li>
         </ul>
     </nav>
@@ -37,6 +37,7 @@
     </div>
 </section>
 <!--About Me Section-->
+<body>
 <main>
 <section id="about-me">
     <div class="flex-row">
@@ -56,20 +57,56 @@
 </div>
 </section>
 <!--Start of the work section-->
-<section id= "work">
+<section id= "work" >
     <div class="flex-row">
     <h2 class="section-title">Work</h2>
-        <div class="Personal-info run-buddy">
-            <span>Run-Buddy</span>
+        <div class="Personal-info work">
+            <span>Run-Buddy</br>HTML/CSS</span>
             <img src='./assets/images/Run Buddy Image.png' alt="Run-Buddy Header Image" />
-            <h4>HTML/CSS</h4>
+        </div>
+        <div class= "work">
+            <span>Horiseon</br>bCode Refactor-HTML/CSS</span>
+            <img src='./assets/images/Horiseon IMG.png' alt="Header Image of Horiseon Webpage"/>
+        </div>
+        <div class="work">
+            <span>Placeholder 1</span>
+            <img src='./assets/images/pexels-felix-mittermeier-956981.jpg' alt="Galaxy Image for Placeholder 1"/>
+        </div>
+        <div class="work">
+            <span>Placeholder 2</span>
+            <img src='./assets/images/pexels-pixabay-220067.jpg' alt="bubbles image for Placeholder 2"/>
+        </div>
+        <div class= "work">
+            <span>Placeholder 3</span>
+            <img src='./assets/images/pexels-pixabay-247671.jpg' alt="wood image for Placeholder 3"/>
+        </div>
+    </div> 
+</section>
+<section id="contact-me">
+    <div class="flex-row">
+    <h2 class="section-title">Contact Me</h2>
+        <div class= "Personal-info flex-item">
+            <ul>
+                <li>
+                    <a href="tel: 970-779-4501">970-779-4501</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/jessica-kamman-50a1aa159/" target="_blank">LinkedIn</a>
+                </li>
+                <li>
+                    <a href="https://github.com/kamm8899" target="_blank">Github</a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/" target="_blank">Twitter</a>
+                </li>
+            </ul>
+        </div>
+            
+        </div>
+    </div>
 
-    </div>
-    </div>
 </section>
 
 </main>
-<body>
-    
 </body>
 </html>
