--- a/index.html
+++ b/index.html
@@ -39,11 +39,16 @@
 <!--About Me Section-->
 <body>
 <main>
+    <!--headshot-->
+<section class= "img-headshot">
+    <div class= flex-row>
+    </div>
+    </section>
 <section id="about-me">
     <div class="flex-row">
     <h2 class="section-title">About Me </h2>
-    
-    <div class="Personal-info">
+     <div class="Personal-info">
+
         <p>
             I have worked for Prudential Insurance Company since July 2019. I started as a Associate System Developer where I was tasked to help the Embed Intelligence and Machine Learning team as a Scrum Master. Within this team I helped with generating a embed Intelligence engine, via the use of Python. In July of 2020 I was promoted to Analyst System Developer, where I now work as a part time developer as well as helping 4 teams with Scrum Master duties. My teams currently are one of the Enterprise DevOps teams that helped reshape the DevOps space within Prudential. <br/>
            </p>
@@ -53,6 +58,7 @@
             Education: Graduated with a Bachelors in Economics and Mathematics in 2012 , and further continued my education in 2019 with completing my Bachelors of Science in Computer Science from Southern New Hampshire University in 2019. Currently I am pursuing a Masters in Computer Science and a Masters in Artifical Inteligence from Steven's Instutite of Technology, as well as attending a Full Stack Bootcamp with Rutgers University. 
         </p>
     </div>
+
 </div>
 </div>
 </section>
@@ -65,11 +71,11 @@
             <img src='./assets/images/Run Buddy Image.png' alt="Run-Buddy Header Image" />
         </div>
         <div class= "work">
-            <span>Horiseon</br>bCode Refactor-HTML/CSS</span>
+            <span>Horiseon</br>Code Refactor-HTML/CSS</span>
             <img src='./assets/images/Horiseon IMG.png' alt="Header Image of Horiseon Webpage"/>
         </div>
         <div class="work">
-            <span>Placeholder 1</span>
+            <span>Movie Analytics</br>Data Analytics-Python</span>
             <img src='./assets/images/pexels-felix-mittermeier-956981.jpg' alt="Galaxy Image for Placeholder 1"/>
         </div>
         <div class="work">
