added additonal code to the Work flex containers

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <nav>
         <ul>
             <li>
-                <a href="#about-me">About Me</a>
+                <a href="#about-me" class="links">About Me</a>
             </li>
             <li>
-                <a href="#work">Work</a>
+                <a href="#work" class="links">Work</a>
             </li>
             <li>
-                <a href="#contact-me">Contact Me</a>
+                <a href="#contact-me" class="links">Contact Me</a>
             </li>
             <li>
                 <a href="#resume">Resume</a>
@@ -47,7 +47,7 @@
 <section id="about-me">
     <div class="flex-row">
     <h2 class="section-title">About Me </h2>
-     <div class="Personal-info">
+     <div class="Personal-info content">
 
         <p>
             I have worked for Prudential Insurance Company since July 2019. I started as a Associate System Developer where I was tasked to help the Embed Intelligence and Machine Learning team as a Scrum Master. Within this team I helped with generating a embed Intelligence engine, via the use of Python. In July of 2020 I was promoted to Analyst System Developer, where I now work as a part time developer as well as helping 4 teams with Scrum Master duties. My teams currently are one of the Enterprise DevOps teams that helped reshape the DevOps space within Prudential. <br/>
@@ -66,32 +66,47 @@
 <section id= "work" >
     <div class="flex-row">
     <h2 class="section-title">Work</h2>
-        <div class="Personal-info work">
-            <span>Run-Buddy</br>HTML/CSS</span>
-            <img src='./assets/images/Run Buddy Image.png' alt="Run-Buddy Header Image" />
+    <div class="work-container content">
+        <div class="work run-buddy">
+            <a href="https://github.com/kamm8899/run-buddy" alt=" Run Buddy code"></a>
+            <div class= "work-title">
+            <h3>Run-Buddy</h3>
+            <h4>HTML/CSS</h4>
         </div>
-        <div class= "work">
-            <span>Horiseon</br>Code Refactor-HTML/CSS</span>
-            <img src='./assets/images/Horiseon IMG.png' alt="Header Image of Horiseon Webpage"/>
         </div>
-        <div class="work">
-            <span>Movie Analytics</br>Data Analytics-Python</span>
-            <img src='./assets/images/pexels-felix-mittermeier-956981.jpg' alt="Galaxy Image for Placeholder 1"/>
+        <div class= " work horiseon">
+            <a href="https://github.com/kamm8899/Code-Refactor" target="_blank"></a>
+            <div class= "work-title">
+                <h3>Horiseon</h3>
+                <h4>Code Refactor-HTML/CSS</h4>
+            </div>
         </div>
-        <div class="work">
-            <span>Placeholder 2</span>
-            <img src='./assets/images/pexels-pixabay-220067.jpg' alt="bubbles image for Placeholder 2"/>
+        <div class="work movie-analytics">
+            <a href="https://github.com/kamm8899/Movie-Analytics-Country" alt="Movie Analytics Github"></a>
+            <div class="work-title">
+                <h3>Movie Analytics</h3>
+                <h4>Data Analytics-Python</h4>
+            </div>
         </div>
-        <div class= "work">
-            <span>Placeholder 3</span>
-            <img src='./assets/images/pexels-pixabay-247671.jpg' alt="wood image for Placeholder 3"/>
+        <div class="work placeholder-1">
+            <a href="https://www.google.com/" alt="Placeholder 1 Google"></a>
+            <div class="work-title">
+                <h3>Placeholder 1</h3>
+            </div>
+        </div>
+        <div class= "work placeholder-2">
+            <a href="https://rutgers.edu" alt="Placeholder 2 Rutgers"></a>
+            <div class="work-title">
+                <h3>Placeholder 2</h3>
+            </div>
+        </div>
         </div>
     </div> 
 </section>
 <section id="contact-me">
     <div class="flex-row">
     <h2 class="section-title">Contact Me</h2>
-        <div class= "Personal-info flex-item">
+        <div class= "contact-info content">
             <ul>
                 <li>
                     <a href="tel: 970-779-4501">970-779-4501</a>
