media query added

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <section id="about-me">
     <div class="flex-row">
     <h2 class="section-title">About Me </h2>
-     <div class="Personal-info content">
+     <div class="personal-info content">
 
         <p>
             I have worked for Prudential Insurance Company since July 2019. I started as a Associate System Developer where I was tasked to help the Embed Intelligence and Machine Learning team as a Scrum Master. Within this team I helped with generating a embed Intelligence engine, via the use of Python. In July of 2020 I was promoted to Analyst System Developer, where I now work as a part time developer as well as helping 4 teams with Scrum Master duties. My teams currently are one of the Enterprise DevOps teams that helped reshape the DevOps space within Prudential. 
