added additonal resizing options and resume

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="#contact-me" class="links">Contact Me</a>
             </li>
             <li>
-                <a href="#resume">Resume</a>
+                <a href="./assets/PDF/Resume.pdf">Resume</a>
             </li>
         </ul>
     </nav>
