added new project to Portifolio

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
     <div class="flex-row">
     <h2 class="section-title">Work</h2>
     <div class="work-container content">
-        <div class="work run-buddy">
-            <a href="https://github.com/kamm8899/run-buddy" alt=" Run Buddy code">
+        <div class="work nationalTrip">
+            <a href="" alt="National-Trip">
             <div class= "work-title">
-            <h3>Run-Buddy</h3>
-            <h4>HTML/CSS</h4>
+            <h3>National Trip Planner</h3>
+            <h4>JavaScript/JQuery/API</h4>
         
         </div>
         </div>
@@ -95,17 +95,19 @@
             </div>
         </div>
     </a>
-        <div class="work placeholder-1">
-            <a href="https://www.google.com/" alt="Placeholder 1 Google">
-            <div class="work-title">
-                <h3>Placeholder 1</h3>
+        <div class="work run-buddy">
+            <a href="https://github.com/kamm8899/run-buddy" alt=" Run Buddy code">
+                <div class= "work-title">
+                <h3>Run-Buddy</h3>
+                <h4>HTML/CSS</h4>
             </div>
         </div>
     </a>
         <div class= "work placeholder-2">
-            <a href="https://rutgers.edu" alt="Placeholder 2 Rutgers">
+            <a href="https://github.com/kamm8899/Open-Weather-Weather-Forecast" alt="Placeholder 2 Rutgers">
             <div class="work-title">
-                <h3>Placeholder 2</h3>
+                <h3>Open Weather Forecast</h3>
+                <h4>JavaScript/API</h4>
             </div>
         </div>
     </a>
