--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <h2 class="section-title">Work</h2>
     <div class="work-container content">
         <div class="work nationalTrip">
-            <a href="" alt="National-Trip">
+            <a href="https://github.com/miraj00/National-Park-Trip-Planner" alt="National-Trip">
             <div class= "work-title">
             <h3>National Trip Planner</h3>
             <h4>JavaScript/JQuery/API</h4>
