added Project2 to the port

--- a/index.html
+++ b/index.html
@@ -68,15 +68,24 @@
     <div class="flex-row">
     <h2 class="section-title">Work</h2>
     <div class="work-container content">
-        <div class="work nationalTrip">
-            <a href="https://github.com/miraj00/National-Park-Trip-Planner/" alt="National-Trip">
+        <div class="work deepBlue">
+            <a href="https://github.com/Chasetopher/deep-blue" alt="deep-blue">
             <div class= "work-title">
-            <h3>National Trip Planner</h3>
-            <h4>JavaScript/JQuery/API</h4>
+            <h3>Deep Blue</h3>
+            <h4>JavaScript/MySQL/ORM</h4>
         
         </div>
         </div>
     </a>
+    <div class= "work nationalTrip">
+        <a href="https://github.com/miraj00/National-Park-Trip-Planner/" alt="National-Trip">
+        <div class= "work-title">
+            <h3>National Trip Planner</h3>
+            <h4>JavaScript/JQuery/API</h4>
+        
+        </div>
+    </div>
+</a>
         <div class= " work horiseon">
             <a href="https://github.com/kamm8899/Code-Refactor" target="_blank">
             <div class= "work-title">
